# Melodious

./: .dockerignore  .gitignore  AGENTS.md  CURRENT_TASK.md  Claude.md  HOLDOUT_MANIFEST.md  MODEL_CARD.md  PROJECT_CONTEXT.md  README.md  STRUCTURE.md  documentation.md  extend_training.py  instructions.md  main.py  readme_correction.md  requirements.txt  setup_yolo_dataset.py
melodious-v2/: .env.example  .gitignore  AGENTS.md  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
melodious-v2/configs/: deploy.local.yaml  detection_136class_eval_resolution_sweep.yaml  detection_136class_yolov8m.yaml  detection_15class_repro.yaml
melodious-v2/docs/: AGENT_PROMPTS.md  APP_BUILD_AUDIT.md  ARCHITECTURE.md  DATA_CARD.md  EXPERIMENTS.md  HANDOFF.md  METRIC_IMPROVEMENT.md  MILESTONE_HISTORY.md  NOTE_EXTRACTION_DEMO.md  PRESENTATION_TECHNICAL_REVIEW.tex  ROADMAP.md  RUBRIC_MAP.md  STATUS.md  detector_payload_v2.schema.json
melodious-v2/frontend/: index.html  package-lock.json  package.json  vite.config.ts
melodious-v2/scripts/: analyze_detection_136class_run.py  extract_notes_from_image.py  generate_experiment_index.py  run_api.py  run_detection_136class_yolo.py  run_detection_15class_repro.py  smoke_public_demo.py
melodious-v2/tests/: test_api.py  test_assembly_gnn_runtime.py  test_contracts.py  test_dataset_manifests.py  test_detector_class_coverage.py  test_e2e_export.py  test_export_and_reports.py  test_full_detector_m3.py  test_graph_metrics.py  test_note_extraction_cli.py  test_note_extraction_demo.py  test_product_api.py  test_yolo_tiling.py
(+515 files in other folders)
