[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melodious-v2"
version = "0.1.0"
description = "Melodious V2: full-taxonomy cloud optical music recognition."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
  "pydantic>=2.0",
  "numpy>=1.26",
  "pillow>=10",
  "opencv-python>=4.8",
  "music21>=9.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.0",
  "torchvision>=0.15",
  "torch-geometric>=2.5",
  "ultralytics>=8.0",
  "onnxruntime>=1.18",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

